--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -118,16 +118,16 @@ a:focus {
   }
 }
 #logo {
-  padding-top:700px;
+  padding-top:200px;
 }
 .intro {
   display: table;
   width: 100%;
-  height: 500px !important;
+  height:auto;
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: url(../img/phenom.jpg) no-repeat bottom center scroll;
+  background: url(../img/website-banner.jpg) no-repeat bottom center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -228,6 +228,18 @@ a:focus {
   padding: 50px 0;
   color: white;
   background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
+  background-color: black;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+}
+#events {
+  width: 100%;
+  height: 550px;
+  padding: 50px 0;
+  color: black;
+  background: url(../img/bwevents.jpg) no-repeat left top scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
